--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Learn about different subjects in physics, mathmatics, and engineering using interactive simulations."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="imgs/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="imgs/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="imgs/favicon-16x16.png"
+    />
+    <link rel="manifest" href="imgs/site.webmanifest" />
+    <link rel="mask-icon" href="imgs/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <title>Phizze</title>
   </head>
   <body>
@@ -59,56 +84,27 @@
     <div class="drop-down-lists-container">
       <div class="dropdown-list ph">
         <div class="list-column">
-          <a href="#" class="dropdown-item">kinematics</a>
-          <a href="#" class="dropdown-item">Force</a>
-          <a href="#" class="dropdown-item">Work</a>
-          <a href="#" class="dropdown-item">Density</a>
-        </div>
-        <div class="list-column">
-          <a href="#" class="dropdown-item">kinematics</a>
-          <a href="#" class="dropdown-item">Velocity</a>
-          <a href="#" class="dropdown-item">Acceleration</a>
-          <a href="#" class="dropdown-item">Force</a>
+          <a href="simulations/kinematics/index.html" class="dropdown-item">
+            kinematics
+          </a>
         </div>
       </div>
-      <div class="dropdown-list math">
-        <div class="list-column">
-          <a href="#" class="dropdown-item">kinematics</a>
-          <a href="#" class="dropdown-item">Velocity</a>
-          <a href="#" class="dropdown-item">Acceleration</a>
-          <a href="#" class="dropdown-item">Force</a>
-        </div>
-        <div class="list-column">
-          <a href="#" class="dropdown-item">kinematics</a>
-          <a href="#" class="dropdown-item">Velocity</a>
-          <a href="#" class="dropdown-item">Acceleration</a>
-          <a href="#" class="dropdown-item">Force</a>
-        </div>
-      </div>
-      <div class="dropdown-list eng">
-        <div class="list-column">
-          <a href="#" class="dropdown-item">moment of inertia</a>
-          <a href="#" class="dropdown-item">work</a>
-          <a href="#" class="dropdown-item">materials</a>
-          <a href="#" class="dropdown-item">Load</a>
-        </div>
-        <div class="list-column">
-          <a href="#" class="dropdown-item">Reflection</a>
-          <a href="#" class="dropdown-item">SLab</a>
-        </div>
-      </div>
+      <div class="dropdown-list math"></div>
+      <div class="dropdown-list eng"></div>
     </div>
     <main>
       <div class="ad-template left"></div>
       <div class="cards-container">
         <div class="card">
-          <a href="#">
+          <a href="simulations/kinematics/index.html">
             <img
               src="imgs/kinematics-scr.webp"
               alt="kinematics simulation screenshot"
             />
           </a>
-          <a href="#"> Kinematics Simulation </a>
+          <a href="simulations/kinematics/index.html">
+            Kinematics Simulation
+          </a>
         </div>
       </div>
       <div class="ad-template right"></div>
@@ -135,7 +131,9 @@
               required
             ></textarea>
           </div>
-          <button type="submit" value="Submit">Submit</button>
+          <button type="submit" class="generic-btn" value="Submit">
+            Submit
+          </button>
         </form>
       </div>
       <div class="panel">
@@ -143,7 +141,7 @@
         <p>
           If you would like to make a donation to support the Phizze platform
           and help us grow further, and expand on our mission! You can do so
-          through the foloing Paypal account:
+          through the folowing Paypal account:
         </p>
         <p>Paypal: <span>m.w.m.h@hotmail.com</span></p>
         <span>
@@ -154,12 +152,12 @@
       <div class="panel">
         <figure>
           <img src="imgs/profile-pic.webp" alt="a picture on Mahmoud Hadman" />
-          <figcaption>Founder: Mahmoud Hamdan</figcaption>
+          <figcaption>Developer: Mahmoud Hamdan</figcaption>
         </figure>
         <h3>About Phizze</h3>
         <p>
           Phizze.com is an educational platform that provides learning by
-          interacting with simulations and random generated quizes.
+          interacting with simulations.
         </p>
         <p>
           The idea started when I was learning about mathmatics and physics
@@ -172,6 +170,7 @@
           through my own curiosity for learning and knowledge Phizze was porn.
         </p>
       </div>
+      <div class="panel"></div>
     </div>
     <footer>
       <p>Phizze 2022 @ All Rights Reserved</p>
