--- a/src/pages/searchResults.html
+++ b/src/pages/searchResults.html
@@ -7,15 +7,40 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../imgs/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../imgs/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../imgs/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../imgs/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="../imgs/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <title>Search Results</title>
   </head>
   <body>
     <header id="main-banner">
-      <a href="../../index.html" class="logo">
-        <img src="../../imgs/logo.webp" alt="Phizze logo" />
+      <a href="../index.html" class="logo">
+        <img src="../imgs/logo.webp" alt="Phizze logo" />
       </a>
       <nav id="main-nav">
         <button
@@ -62,43 +87,10 @@
           <a href="../simulations/Kinematics/index.html" class="dropdown-item">
             kinematics
           </a>
-          <a href="#" class="dropdown-item">Force</a>
-          <a href="#" class="dropdown-item">Work</a>
-          <a href="#" class="dropdown-item">Density</a>
-        </div>
-        <div class="list-column">
-          <a href="#" class="dropdown-item">kinematics</a>
-          <a href="#" class="dropdown-item">Velocity</a>
-          <a href="#" class="dropdown-item">Acceleration</a>
-          <a href="#" class="dropdown-item">Force</a>
         </div>
       </div>
-      <div class="dropdown-list math">
-        <div class="list-column">
-          <a href="#" class="dropdown-item">kinematics</a>
-          <a href="#" class="dropdown-item">Velocity</a>
-          <a href="#" class="dropdown-item">Acceleration</a>
-          <a href="#" class="dropdown-item">Force</a>
-        </div>
-        <div class="list-column">
-          <a href="#" class="dropdown-item">kinematics</a>
-          <a href="#" class="dropdown-item">Velocity</a>
-          <a href="#" class="dropdown-item">Acceleration</a>
-          <a href="#" class="dropdown-item">Force</a>
-        </div>
-      </div>
-      <div class="dropdown-list eng">
-        <div class="list-column">
-          <a href="#" class="dropdown-item">moment of inertia</a>
-          <a href="#" class="dropdown-item">work</a>
-          <a href="#" class="dropdown-item">materials</a>
-          <a href="#" class="dropdown-item">Load</a>
-        </div>
-        <div class="list-column">
-          <a href="#" class="dropdown-item">Reflection</a>
-          <a href="#" class="dropdown-item">SLab</a>
-        </div>
-      </div>
+      <div class="dropdown-list math"></div>
+      <div class="dropdown-list eng"></div>
     </div>
     <main>
       <div class="ad-template left"></div>
@@ -127,7 +119,9 @@
               required
             ></textarea>
           </div>
-          <button type="submit" value="Submit">Submit</button>
+          <button type="submit" class="generic-btn" value="Submit">
+            Submit
+          </button>
         </form>
       </div>
       <div class="panel">
@@ -146,15 +140,15 @@
       <div class="panel">
         <figure>
           <img
-            src="../../imgs/profile-pic.webp"
+            src="../imgs/profile-pic.webp"
             alt="a picture on Mahmoud Hadman"
           />
-          <figcaption>Founder: Mahmoud Hamdan</figcaption>
+          <figcaption>Developer: Mahmoud Hamdan</figcaption>
         </figure>
         <h3>About Phizze</h3>
         <p>
           Phizze.com is an educational platform that provides learning by
-          interacting with simulations and random generated quizes.
+          interacting with simulations.
         </p>
         <p>
           The idea started when I was learning about mathmatics and physics
