Pressure simulation added + Minor fixes and compatibility optimization

--- a/src/pages/searchResults.html
+++ b/src/pages/searchResults.html
@@ -10,6 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap"
       rel="stylesheet"
     />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8319663536658145"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -84,8 +89,11 @@
     <div class="drop-down-lists-container">
       <div class="dropdown-list ph">
         <div class="list-column">
-          <a href="../simulations/Kinematics/index.html" class="dropdown-item">
-            kinematics
+          <a href="../simulations/kinematics/index.html" class="dropdown-item">
+            Kinematics
+          </a>
+          <a href="../simulations/pressure/index.html" class="dropdown-item">
+            Pressure
           </a>
         </div>
       </div>
@@ -131,7 +139,15 @@
           and help us grow further, and expand on our mission! You can do so
           through the foloing Paypal account:
         </p>
-        <p>Paypal: <span>m.w.m.h@hotmail.com</span></p>
+        <p>
+          Paypal:
+          <a
+            class="generic-btn"
+            href="https://paypal.me/phizze?country.x=JO&locale.x=en_US"
+          >
+            Donate
+          </a>
+        </p>
         <span>
           Any ammount no matter how small it's, is much appreciated and will
           help us develop more features and improve the platform.
