--- a/src/simulations/kinematics/index.html
+++ b/src/simulations/kinematics/index.html
@@ -89,7 +89,8 @@
     <div class="drop-down-lists-container">
       <div class="dropdown-list ph">
         <div class="list-column">
-          <a href="index.html" class="dropdown-item">kinematics</a>
+          <a href="index.html" class="dropdown-item">Kinematics</a>
+          <a href="../pressure/index.html" class="dropdown-item">Pressure</a>
         </div>
       </div>
       <div class="dropdown-list math"></div>
@@ -246,7 +247,15 @@
           and help us grow further, and expand on our mission! You can do so
           through the foloing Paypal account:
         </p>
-        <p>Paypal: <span>m.w.m.h@hotmail.com</span></p>
+        <p>
+          Paypal:
+          <a
+            class="generic-btn"
+            href="https://paypal.me/phizze?country.x=JO&locale.x=en_US"
+          >
+            Donate
+          </a>
+        </p>
         <span>
           Any ammount no matter how small it's, is much appreciated and will
           help us develop more features and improve the platform.
@@ -282,9 +291,9 @@
           Kinematics is the study of motion, and is used to explain the movement
           of objects without considering what is causing it. It includes
           concepts such as: distance or displacement, speed or velocity, and
-          acceleration. To start our journey in understanding the motion of
+          acceleration. To lay the foundation in understanding the motion of
           objects, first we must be able to distinguish between Distance /
-          Displacement, Speed / Velocity, Scaler and Vector quantities.
+          Displacement, Speed / Velocity, or "Scaler and Vector quantities".
         </p>
         <h4>Scaler vs Vector quantities</h4>
         <p>
@@ -295,23 +304,24 @@
           100m, and a speed of 80km/h are all scaler quantities. On the other
           hand <strong>a vector is a "magnitude & direction" quantity </strong>,
           which means it not only cares about how much of something there is but
-          also about its direction, example of vector quantities are a
-          displacement 5m to the east, a force 8<sub>N</sub> to the left, or a
-          forward acceleration of 2m/s<sup>2</sup>.
+          also about its direction, examples of vector quantities are a
+          displacement of 5m to the east, a force 8<small>N</small> to the left,
+          or a forward acceleration of 2m/s<sup>2</sup>.
         </p>
         <p>
           So now after we have been introduced to the concept of scalers and
           vectors we can explain the difference between distance (a scaler
-          quantity), and displacement (a vector quantity), os if we said that
-          somthing moved a 5 meters distance we don't care if it moved to the
-          right, left, up or down, we just care about the fact that it moved 5
-          meters, but if something was displaced 5 meters, we must stat if it
+          quantity), and displacement (a vector quantity), if we said that
+          somthing moved a distance of 5 meters, we don't care if it moved to
+          the right, left, up or down, we just care about the fact that it moved
+          5 meters, but if something was displaced 5 meters, we must state if it
           was displaced to the right, left , up or down. The same difference
-          applies to speed (scaler quantity) vs velocity (vector quantity).
+          applies to speed a scaler quantity vs velocity a vector quantity.
         </p>
         <h4>Kinematic Equations</h4>
         <p>
-          There are Five variables we can solve for using kinematics equation:
+          There are Five variables we can solve for using the kinematic
+          equations:
         </p>
         <ul>
           <li>s: Displacement</li>
@@ -321,9 +331,10 @@
           <li>t: Time interval</li>
         </ul>
         <p>
-          Given that an object is moving with a constant accelereation you can
-          solve for any of the kinematic varibales "displacement, initial/final
-          velocities, time, or acceleration", using the folowing equations:
+          Given that an object is moving with a constant acceleration you can,
+          with some algebric manibulation, solve for any of the kinematic
+          varibales "displacement, initial/final velocities, time, or
+          acceleration", using the folowing equations:
         </p>
         <ul>
           <li><span>v=v<sub>o</sub>+at</span></li>
